--- a/stylesproject.css
+++ b/stylesproject.css
@@ -2,251 +2,211 @@
     font-family: 'CustomFont';
     src: url('Resources/MinecraftRegular-Bmg3.ttf');
 }
-
-body{
+/*font-family: 'CustomFont', sans-serif;*/
+body, html {
+    font-family: 'CustomFont', sans-serif;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    font-family: 'CustomFont', sans-serif;
-    color: white;
-    width: 100%;
     height: 100%;
-    background: black;
-}
-
-#top_intro {
-    position:relative;
-    top: 20px;
-    font-size: 32px;
-    text-align:center;
-}
-#top_right_intro{
-    position:absolute;
-    top: 30px;
-    right: 20px;
-    font-size: 20px;
-    text-align:center;
+    overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
 #background {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: -1; /* Ensure it is behind other content */
+    background: black; /* Optional: Set a background color */
+    overflow: hidden;
 }
 
-
-#first_description{
-    position: relative;
-    top: 120px;
-    font-size: 32px;
-    text-align:center;
-}
-#year_uoft{
-    position: relative;
-    top: 160px;
-    font-size: 22px;
-    text-align:center;
+#top_intro {
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 20px;
+    color: #ffffff;
 }
 
-#back_uoft{
-    position: relative;
-    top: 200px;
-    font-size: 22px;
-    text-align:center;
+#top_right_intro {
+    text-align: center;
+    font-size: 18px;
+    color: #ffffff;
+    margin-bottom: 20px;
 }
+
 #courses_intro{
-    left:434px;
-    top:360px;
-    position: absolute;
-    font-size: 20px;
+    margin: 40px 40px 10px 40px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #ffffff;
 }
 
 #experience_intro{
-    left:70px;
-    top:300px;
-    position: relative;
+    margin: 40px 40px 10px 40px;
     font-size: 30px;
-}
-/*500px between intro and description*/
-#jusan_intro{
-    left:620px;
-    top:380px;
-    position: relative;
-    font-size: 30px;
-}
-
-#jusan_year{
-    left:490px;
-    top:390px;
-    position: relative;
-    font-size: 20px;
-}
-#jusan_description{
-    left:120px;
-    list-style: none;
-    position: relative;
-    top:400px;
-    font-size: 20px;
-    display: inline-block;
-}
-/*520px between intro and description*/
-#lifestream_intro{
-    left:640px;
-    top:490px;
-    position: relative;
-    font-size: 30px;
-}
-#lifestream_year{
-    left:490px;
-    top:500px;
-    position: relative;
-    font-size: 20px;
-}
-#lifestream_description{
-    left:120px;
-    list-style: none;
-    position: relative;
-    top:510px;
-    font-size: 20px;
-    display: inline-block;
-}
-
-.course-list {
-    left:600px;
-    list-style: none;
-    position: relative;
-    top:209px;
-    font-size: 20px;
-    display: inline-block;
-}
-
-#jusan_main_body{
-    max-width:1230px;
-}
-
-#lifestream_main_body{
-    max-width: 1230px;
-}
-
-#ji_logo_id{
-    top:830px;
-    right:200px;
-    position: absolute;
-}
-
-#life_stream_logo_id{
-    top:1250px;
-    right:200px;
-    position: absolute;
+    font-weight: bold;
+    color: #ffffff;
 }
 
 #projects_intro{
-    left:70px;
-    top:600px;
-    position: relative;
+    margin: 40px 40px 10px 40px;
     font-size: 30px;
+    font-weight: bold;
+    color: #ffffff;
 }
 
-#GIS_intro{
-    left:520px;
-    top:640px;
-    position: relative;
-    font-size: 30px;
-}
-#gis_demo{
-    left:230px;
-    top:1820px;
-    position: absolute;
-}
-
-#GIS_description{
-    left:450px;
-    top:1400px;
-    position: relative;
-    font-size: 20px;
-}
-
-#acne_intro{
-    left:560px;
-    top:1500px;
-    position: relative;
-    font-size: 30px;
-}
-
-#disclaimer{
-    left:1150px;
-    top:2650px;
-    position: absolute;
-    font-size: 20px;
-    max-width: 300px;
-}
-.course-list li {
-    margin-bottom: 10px;
-}
-
-#acne_git{
-    left:1300px;
-    top:2930px;
-    position: absolute;
+#first_description,
+#year_uoft,
+#back_uoft,
+#GIS_intro,
+#acne_intro,
+#gyro_intro {
+    text-align: center;
+    margin: 20px 40px;
     font-size: 25px;
-    color: aqua;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.course-list {
+    text-align: center;
+    list-style-type: none;
+    padding: 0;
+    margin: 0 60px 20px 60px;
+}
+
+.course-list li {
+    color: #ffffff;
+    padding: 10px;
+    font-size: 18px;
+}
+
+
+#lifestream_intro {
+    color: #ffffff;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    flex: 1;
+}
+
+#jusan_year,
+#lifestream_year {
+    text-align: center;
+    margin: 0 40px 20px 40px;
+    color: #ffffff;
+}
+
+.experience-section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 40px 40px 10px 40px;
+}
+
+#jusan_intro {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    flex: 1;
+    color: #ffffff;
+}
+
+#ji_logo_id {
+    max-height: 100px;
+    margin-left: -180px;
+}
+
+#life_stream_logo_id{
+    max-height: 100px;
+    margin-left: -180px;
+}
+
+#jusan_description,
+#lifestream_description{
+    font-size: 20px;
+    margin: 0 60px 20px 60px;
+    padding: 10px;
+    color: #ffffff;
+}
+
+#GIS_description,
+#acne_description,
+#pen_description {
+    margin: 0 60px 20px 60px;
+    padding: 10px;
+    color: #ffffff;
+    margin-left: 20%;
+    font-size: 20px;
+}
+
+#jusan_main_body,
+#lifestream_main_body,
+#gis_main_body,
+#acne_main_body,
+#pen_main_body {
+    list-style-type: disc;
+    margin: 10px 0;
+    padding-left: 20px;
+}
+.acne-section{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.acne-section img {
+    flex: 1;
+    max-width: 30%;
+    margin: 10px 10px 10px;
+    height: auto;
 }
 #acne_demo{
-    left:1030px;
-    top:2880px;
-    height: 560px;
-    width:600px;
-    position: absolute;
+    display: block;
+    margin: 20px auto;
+    max-width: 100%;
+    height: auto;
 }
 
-#acne_model{
-    left:80px;
-    top:2990px;
-    height: 320px;
-    width: 520px;
-    position: absolute;
+#pen_demo {
+    display: block;
+    margin: 20px auto;
+    max-width: 100%;
+    height: auto;
 }
 
-#acne_work{
-    left:630px;
-    top:2990px;
-    height: 320px;
-    width:540px;
-    position: absolute;
+#gis_demo {
+    text-align: center;
+    margin: 20px 0;
 }
 
-#acne_description{
-    left:400px;
-    top:1870px;
-    position: relative;
+#acne_git {
+    display: block;
+    text-align: center;
+    margin: 10px auto;
+    color: #fcfcfc;
+    text-decoration: none;
     font-size: 20px;
 }
 
-#acne_main_body{
-    max-width: 800px;
+#acne_git:hover {
+    text-decoration: underline;
 }
 
-#gyro_intro{
-    left:680px;
-    top:1900px;
-    position: relative;
-    font-size: 30px;
-}
-
-#pen_demo{
-    left:580px;
-    top:3690px;
-    height: 360px;
-    width:360px;
+.star {
     position: absolute;
+    width: 2px;
+    height: 2px;
+    background: white;
+    border-radius: 50%;
+    box-shadow: 0 0 10px white, 0 0 20px white;
+    animation: blink 5s infinite ease-in-out;
 }
 
-#pen_description{
-    left:400px;
-    top:2300px;
-    position: relative;
-    font-size: 20px;
+@keyframes blink {
+    0%, 100% { opacity: 0; }
+    50% { opacity: 1; }
 }
